fix small sty;ing issues with alignment in index and colors of text in index and show of posts

--- a/blog_on_rails/app/assets/stylesheets/main.scss
+++ b/blog_on_rails/app/assets/stylesheets/main.scss
@@ -86,3 +86,8 @@ ul.comment-list {
 .foot {
   padding-left: 0px;
 }
+
+.card-deck {
+  margin-left: 0;
+  margin-right: 0;
+}
